# skelengo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skelengo/: manage.py
skelengo/probes/: apps.py  tests.py  urls.py  views.py
skelengo/sea/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
skelengo/sea/migrations/: 0001_initial.py
skelengo/skelengo/: asgi.py  urls.py  wsgi.py
skelengo/skelengo/settings/: __init__.py  admin.py  apps.py  auditlog.py  auth.py  aws.py  constance.py  constance_config.py  db.py  localize.py  location.py  logging.py  middleware.py  policies.py  redis.py  rest.py  rq.py  secret.py  silk.py  storages.py  time.py  utils.py  vars.py  wsgi.py
